--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
+    "next": "15.1.7",
     "react": "^19.0.0",
+    "react-data-table-component": "^7.6.2",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "react-modern-drawer": "^1.4.0",
+    "react-select": "^5.10.0",
+    "react-toastify": "^11.0.3",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
